[package]
name = "arsm"
version = "0.2.3"
authors = ["Joshua B. <zippymagician1@gmail.com>"]
edition = "2018"

[features]
default = []

# If you enable this with `--feature inline-python`, you can put inline python code into the assembly files
inline-python = [ "pyo3", "regex" ]

# Only for the docker build. Files get passes literally
literal-code = []

# Optimizations for the release mode
[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = 'abort'
overflow-checks = false

[[bin]]
bench = false
path = "src/main.rs"
name = "arsm"

[dependencies]
clap = "2.33.3"
lazy_static = "1.4.0"
num-traits = "0.2"

pyo3 = { version = "0.13.1", features = ["auto-initialize", "extension-module"], optional = true }
regex = { version = "1.4.3", optional = true }